main menu on small width is fixed

--- a/css/common.css
+++ b/css/common.css
@@ -944,8 +944,7 @@ textarea {
   float: left;
   margin-right: 39px;
   margin-left: 30px;
-}
-.logo__icon {
+}.logo__icon {
   display: block;
 }
 
@@ -5370,13 +5369,20 @@ img.mfp-img {
   opacity: 0;
 }
 
+@media screen and (max-width: 1066px) {
+  .logo {
+    margin-left: 10px;
+    margin-right: 20px;
+  }
+}
+
 @media screen and (max-width: 1150px) {
   .main-nav__a {
     padding: 0 5px !important;
   }
 }
 
-@media screen and (max-width: 1075px) {
+@media screen and (max-width: 1180px) {
   .enter__icon {
     margin-left: 12px !important;
   }
