--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -293,6 +293,9 @@
 	margin-right: 39px
 	margin-left: 30px
 
+	+max-screen($mq-logo-w)
+		margin-left: 10px
+		margin-right: 20px
 
 	&__icon
 		display: block
