--- a/sass/_vars.sass
+++ b/sass/_vars.sass
@@ -83,7 +83,10 @@ $fluid_w_half: 45%
 
 
 $mq-main-nav-w: 1150px
-$mq-header-w: 1075px
+$mq-header-w: 1180px
+$mq-logo-w: 1066px
+
+
 $mq-location-q-w: 1126px
 
 $interval-bar-h: 4px
